ws39: keep native restore tests Java 8 compatible